working on banking stuff

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,24 @@ BCA_REQ_PAYMENT_FLAG_URL=''
 # BCA Requested Client Credentials
 BCA_REQ_CLIENT_ID=
 BCA_REQ_CLIENT_SECRET=
+
+
+### Storage Config ###
+
+# DB Configs
+DB_DRIVER=mysql
+DB_HOST=host
+DB_USER=user
+DB_PASSWORD=password
+DB_NAME=db_name
+DB_PORT=3306
+DB_TLS_CONFIG=true
+DB_ALLOW_NATIVE_PASSWORDS=true
+DB_MULTI_STATEMENTS=false
+
+# Redis Configs
+REDIS_HOST=redis_host
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=redis_password
+REDIS_EXPIRATION=60 
