wip: refactoring codes

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 MODE=dev
 
 # Keys
-PRIVATE_KEY_PATH=''
-PUBLIC_KEY_PATH=''
+PRIVATE_KEY_PATH='' # This is the partner private key, not to be revealed in public. In this example is your generated private key
+BCA_PUBLIC_KEY_PATH='' # This is BCA's submitted public key
 
 # BCA Configs
 BCA_BASE_URL='' # Testing
