chore: reformated names, a LOT of names... feat: redis token expiration time now loads from configs fix: used cronjob library to schedule redis unique external request id clearance feat: added management interface (wip)

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ BCA_PUBLIC_KEY_PATH='' # This is BCA's submitted public key
 BCA_BASE_URL='' # Testing
 BCA_CLIENT_ID=
 BCA_CLIENT_SECRET=
+BCA_ACCESS_TOKEN_EXPIRATION_TIME=1 #in seconds
 
 # BCA Endpoints
 BCA_ACCESS_TOKEN_URL=''
