--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ BCA_BASE_URL='' # Testing
 BCA_CLIENT_ID=
 BCA_CLIENT_SECRET=
 BCA_ACCESS_TOKEN_EXPIRATION_TIME=1 #in seconds
+BCA_CHANNEL_ID='' # string
+
+BCA_PARTNER_ID='' # string
 
 # BCA Endpoints
 BCA_ACCESS_TOKEN_URL=''
