wip on transaction watcher

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ BCA_REQ_PAYMENT_FLAG_URL=''
 BCA_REQ_CLIENT_ID=
 BCA_REQ_CLIENT_SECRET=
 
+# Transaction Watcher Config
+WATCHER_MAX_RETRY=10
+WATCHER_DEFAULT_RETRY_INTERNAL=10 # minutes
+WATCHER_DEFAULT_EXPIRE_TIME=24 # hours
+
 
 ### Storage Config ###
 
