--- a/db/changelog/db.changelog-master.yaml
+++ b/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,15 @@
 databaseChangeLog:
 - include:
+    file: db/changelog/bank_feature_types.sql
+- include:
+    file: db/changelog/partnered_banks.sql
+- include:
+    file: db/changelog/bank_features.sql
+- include:
+    file: db/changelog/bank_client_credentials.sql
+- include:
+    file: db/changelog/payment_methods.sql
+- include:
     file: db/changelog/bank_ingress.sql
 - include:
     file: db/changelog/bank_egress.sql
